# Realdeals

./: LICENSE  pyproject.toml
docs/: core_algorithm.md
realdeals/: __init__.py  models.py  pipeline.py  scoring.py
realdeals/tests/: test_pipeline.py
