[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "realdeals"
version = "0.1.0"
description = "Top 10 deal curation pipeline"
requires-python = ">=3.11"
dependencies = []

[tool.pytest.ini_options]
testpaths = ["realdeals/tests"]
pythonpath = ["."]
